--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -10,8 +10,9 @@
 <table>
     <thead>
     <tr>
-        <th>ID<th>
-        <th>Books</th>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Author(s)</th>
     </tr>
     </thead>
     <tbody>
@@ -21,7 +22,6 @@
         <td>
             <p th:text="${book.author.fullName}"></p>
         </td>
-
     </tr>
     </tbody>
 
