--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -6,7 +6,8 @@
     <link th:href="@{/style.css}" rel="stylesheet"></link>
 </head>
 <body>
-<p th:text="${books}"></p>
+<h1>Books</h1>
+<!--<p th:text="${books}"></p> -->
 <table>
     <thead>
     <tr>
