added update book functionality

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -32,10 +32,11 @@
                     </tbody>
                 </table>
             </td>
-            
+
         </tr>
         </tbody>
     </table>
 </div>
+<div th:insert="~{fragments/footer :: alternate}"></div>
 </body>
 </html>
