--- a/src/main/resources/templates/add-book.html
+++ b/src/main/resources/templates/add-book.html
@@ -5,9 +5,9 @@
     <title>Add Book</title>
 </head>
 <body>
-<h1>Add Author</h1>
+<h1>Add Book</h1>
 <form th:action="@{/web/save-book}" th:object="${book}" method="post">
-    <label> Name
+    <label> Title
         <input type="text" th:field="*{title}"/>
     </label><br>
     <label>Author ID
